@@ -940,15 +940,16 @@ class MainContextMenu():
         if self.nautilussvn_extension.dbus_service_available:
             nautilussvn.lib.dbus.service.exit()
             time.sleep(1)
-            self.nautilussvn_extension.dbus_service_available = (
-                nautilussvn.lib.dbus.service.start())
-            
-            # All references to the previous DBus will now have been invaldated
-            time.sleep(1)
-            self.nautilussvn_extension.status_monitor = (
-                StatusMonitor(self.nautilussvn_extension.cb_status))
         else:
             nautilussvn.lib.dbus.service.start()
+            
+        self.nautilussvn_extension.dbus_service_available = (
+            nautilussvn.lib.dbus.service.start())
+        
+        # All references to the previous DBus will now have been invaldated
+        time.sleep(1)
+        self.nautilussvn_extension.status_monitor = (
+            StatusMonitor(self.nautilussvn_extension.cb_status))
         
     def callback_dbus_exit(self, menu_item, paths):
         nautilussvn.lib.dbus.service.exit()
